<resources>
    <string name="app_name">HQRecorder</string>
    <string name="title_record">Record</string>
    <string name="title_recordings">Recordings</string>
    <string name="title_settings">Settings</string>

    <string name="menu_apply_settings">Apply settings</string>

    <string name="record_start">Start recording</string>
    <string name="record_stop">Stop recording</string>
    <string name="record_save_and_next_take">Save &amp; Next</string>
    <string name="record_discard_and_next_take">Discard &amp; Next</string>
    <string name="record_no_audio_permission">Could not get permission to access the microphone.</string>
    <string name="record_no_notification_permission">Recording will stop when you close the app. Allow notifications to fix this.</string>
    <string name="record_clip_indicator">Clip</string>

    <string name="settings_audio_device">Audio Device</string>
    <string name="settings_sampling_rate">Sampling Rate</string>
    <string name="settings_bit_depth">Bit-Depth</string>
    <string name="settings_n_channels_before">utilize</string>
    <string name="settings_tracks">Tracks</string>
    <string name="settings_add_mono_track">Mono</string>
    <string name="settings_add_stereo_track">Stereo</string>
    <string name="settings_hint_track_label">Label</string>
    <string name="settings_hint_track_delete">remove track</string>
    <string name="settings_source_leftmono">Left/Mono Channel</string>
    <string name="settings_source_right">Right Channel</string>

    <string name="record_indicator_description_not_recording">Not recording</string>
    <string name="record_indicator_description_recording">recording</string>

    <string name="mono">Mono</string>
    <string name="stereo">Stereo</string>
    <string name="recordings_metrics">%2$,d Hz %1$dbit</string>
    <string name="recordings_no_items">No recordings stored.</string>
    <string name="recordings_item_share">Share/export this recording.</string>
    <string name="recordings_item_share_choosertitle">Share recording %s</string>

    <string name="notification_record_channel_name">Record in the background</string>
    <string name="notification_record_ready">Ready to record</string>
    <string name="notification_record_recording">Currently recording</string>
    <string name="notification_record_action_stop">Stop</string>

    <string name="error_no_audio_manager">Couldn\'t access the AudioManager API</string>

    <string name="toast_take_saved">Take saved.</string>
    <string name="toast_take_discarded">Take discarded.</string>
    <string name="toast_undo_take_discard">Keep take</string>
    <string name="toast_cant_listen_invalid_config">Failed to start recording, check the settings</string>
    <string name="toast_cant_start_take_already_recording">An error occurred. Please stop the recording and restart the app.</string>
    <string name="toast_cant_listen_still_recording">Can\'t change the configuration, stop the recording first.</string>
    <string name="toast_cant_listen_no_mic_permission">You must grant the app permission to access the microphone.</string>
    <string name="toast_cant_listen_no_config">Can\'t access audio data, check the settings.</string>
    <string name="toast_cant_listen_device_not_available">Can\'t access the selected device. Check the system settings, android probably forces the use of a specific audio device.</string>
    <string name="toast_cant_confgiure_invalid">This configuration seems not to work, sorry.</string>
    <string name="toast_cant_confgiure_still_recording">Stop the recording before applying new settings.</string>
    <string name="toast_cant_finish_not_recording">Not currently recording.</string>
</resources>