<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="io.github.tmarsteel.hqrecorder.ui.home.RecordFragment"
        android:label="@string/title_record"
        tools:layout="@layout/fragment_record" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="io.github.tmarsteel.hqrecorder.ui.recordings.RecordingsFragment"
        android:label="@string/title_recordings"
        tools:layout="@layout/fragment_recordings" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="io.github.tmarsteel.hqrecorder.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>