<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditText
        android:id="@+id/settings_track_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/settings_track_delete_button"
        android:hint="@string/settings_hint_track_label"
        />
    <Button
        android:id="@+id/settings_track_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_track_label"
        android:contentDescription="@string/settings_hint_track_delete"
        app:icon="@android:drawable/ic_delete"
        android:text="@string/settings_hint_track_delete"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        />

    <LinearLayout
        android:id="@+id/settings_track_left_source_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_track_label"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/settings_track_left_source_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_source_leftmono"
            android:labelFor="@id/settings_track_left_source_spinner"
            android:paddingHorizontal="@dimen/default_inset"
            />
        <Spinner
            android:id="@+id/settings_track_left_source_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_track_right_source_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_track_label"
        app:layout_constraintStart_toEndOf="@id/settings_track_left_source_group"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/settings_track_right_source_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_source_right"
            android:labelFor="@id/settings_track_right_source_spinner"
            android:paddingHorizontal="@dimen/default_inset"
            />
        <Spinner
            android:id="@+id/settings_track_right_source_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>