<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/settings_audio_device_spinner_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/settings_audio_device_spinner"
        android:text="@string/settings_audio_device"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        />
    <Spinner
        android:id="@+id/settings_audio_device_spinner"
        android:spinnerMode="dialog"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/settings_audio_device_spinner_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/settings_sampling_rate_spinner"
        />

    <TextView
        android:id="@+id/settings_sampling_rate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_sampling_rate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/settings_sampling_rate_spinner"
        android:layout_marginStart="8dp"
        />
    <Spinner
        android:id="@+id/settings_sampling_rate_spinner"
        android:spinnerMode="dropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_sampling_rate_label"
        app:layout_constraintEnd_toStartOf="@id/settings_bit_depth_spinner"
        />

    <TextView
        android:id="@+id/settings_bit_depth_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_bit_depth"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/settings_bit_depth_spinner"
        android:layout_marginStart="8dp"
        />
    <Spinner
        android:id="@+id/settings_bit_depth_spinner"
        android:spinnerMode="dropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_bit_depth_label"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>